# drp-ai-demo-app-review

./: README.md  installguide.md
BodyMeasurement/: README.md
BodyMeasurement/exe/: app_body_meas_cam
BodyMeasurement/exe/hrnet_cam/: deploy.json
BodyMeasurement/exe/hrnet_cam/preprocess/: addr_map.txt  drp_param_info.txt
BodyMeasurement/exe/hrnet_cam_FHD/: deploy.json
BodyMeasurement/exe/hrnet_cam_FHD/preprocess/: addr_map.txt  drp_param_info.txt
BodyMeasurement/src/: CMakeLists.txt  MeraDrpRuntimeWrapper.h  PreRuntime.h  box.cpp  box.h  camera.cpp  camera.h  define.h  define_color.h  image.cpp  image.h  main.cpp  readme.txt  wayland.cpp  wayland.h
BodyMeasurement/src/package/librealsense/include/: CMakeLists.txt  readme.md
BodyMeasurement/src/package/librealsense/include/librealsense2/: rs.h  rs.hpp  rs_advanced_mode.h  rs_advanced_mode.hpp  rsutil.h
BodyMeasurement/src/package/librealsense/include/librealsense2-gl/: rs_processing_gl.h  rs_processing_gl.hpp
BodyMeasurement/src/package/librealsense/include/librealsense2/h/: rs_advanced_mode_command.h  rs_config.h  rs_context.h  rs_device.h  rs_frame.h  rs_internal.h  rs_option.h  rs_pipeline.h  rs_processing.h  rs_record_playback.h  rs_sensor.h  rs_types.h
BodyMeasurement/src/package/librealsense/include/librealsense2/hpp/: rs_context.hpp  rs_device.hpp  rs_export.hpp  rs_frame.hpp  rs_internal.hpp  rs_options.hpp  rs_pipeline.hpp  rs_processing.hpp  rs_record_playback.hpp  rs_sensor.hpp  rs_serializable_device.hpp  rs_types.hpp
BodyMeasurement/src/package/librealsense/lib/: SymbolicLink_Help.txt
BodyMeasurement/src/package/spdlog/: common.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog.h  stopwatch.h  tweakme.h  version.h
BodyMeasurement/src/package/spdlog/details/: log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  os.h  periodic_worker-inl.h  registry-inl.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  udp_client-windows.h
BodyMeasurement/src/package/spdlog/fmt/: chrono.h  xchar.h
BodyMeasurement/src/package/spdlog/fmt/bundled/: args.h  color.h  core.h  fmt.license.rst  xchar.h
BodyMeasurement/src/package/spdlog/sinks/: ansicolor_sink-inl.h  ansicolor_sink.h  basic_file_sink-inl.h  daily_file_sink.h  hourly_file_sink.h  mongo_sink.h  qt_sinks.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_sinks.h  win_eventlog_sink.h  wincolor_sink.h
BodyMeasurement/src/toolchain/: runtime.cmake
PatchCoreDemo/: .gitignore  README.md
PatchCoreDemo/exe/: app_patch_core_demo
PatchCoreDemo/exe/patch_core_demo/: deploy.json
PatchCoreDemo/exe/patch_core_demo/preprocess/: addr_map.txt  drp_param_info.txt
PatchCoreDemo/src/: CMakeLists.txt  PreRuntimeV2H.cpp  capture.cpp  capture.h  color_map.cpp  color_map.h  define.h  image.cpp  image.h  main.cpp  patchcore_data.cpp  patchcore_data.h  patchcore_proc.cpp  patchcore_proc.h
RiverLevelMonitor/: .gitignore  README.md
RiverLevelMonitor/exe/: Config.ini  Param.ini  app_river_level_monitor_cam
RiverLevelMonitor/exe/deeplabv3_cam/: deploy.json
RiverLevelMonitor/exe/deeplabv3_cam/preprocess/: addr_map.txt  drp_config.mem  drp_param_info.txt
RiverLevelMonitor/exe/licenses/coco-labels/: LICENSE.txt
RiverLevelMonitor/exe/licenses/pytorch-deeplabv3/: LICENSE.txt
RiverLevelMonitor/src/: CMakeLists.txt  IniFile.cpp  IniFile.h  MeraDrpRuntimeWrapper.cpp  box.cpp  box.h  camera.cpp  camera.h  define.h  define_color.h  image.cpp  image.h  main.cpp  wayland.cpp  wayland.h
RiverLevelMonitor/src/package/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  formatter.h  spdlog-inl.h
RiverLevelMonitor/src/package/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
RiverLevelMonitor/src/package/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  periodic_worker.h  registry.h  thread_pool-inl.h  thread_pool.h  udp_client.h  windows_include.h
RiverLevelMonitor/src/package/spdlog/fmt/: bin_to_hex.h  compile.h  fmt.h  ostr.h  ranges.h
RiverLevelMonitor/src/package/spdlog/fmt/bundled/: chrono.h  compile.h  format-inl.h  format.h  locale.h  os.h  ostream.h  printf.h  ranges.h
RiverLevelMonitor/src/package/spdlog/sinks/: base_sink-inl.h  base_sink.h  basic_file_sink.h  dist_sink.h  dup_filter_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  stdout_color_sinks.h  stdout_sinks-inl.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  wincolor_sink-inl.h
